--- a/Assets/StreamingAssets/local_www/index.html
+++ b/Assets/StreamingAssets/local_www/index.html
@@ -6,6 +6,7 @@
       {
         height: 100%; overflow:hidden;
         margin: 0;
+        background-color: black;
       }
 
       iframe
@@ -18,8 +19,14 @@
         overflow:hidden;
       } 
     </style>
+    <script type= "text/javascript">
+      function changeIframeUrl(url)      
+      {
+          document.getElementById("main_frame").src = url;
+      }
+    </script>
   </head>
   <body>
-    <iframe src="https://www.youtube.com/embed/-xNN-bJQ4vI?autoplay=1" width="100%" height="100%" frameborder="0" scrolling="no"/>
+      <iframe id="main_frame" src="" width="100%" height="100%" frameborder="0" scrolling="no"/>
   </body>
 </html>
